--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "express": "4.18.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
